# kokoro

./: .gitignore  pyproject.toml  train.py
kokoro/: pipeline.py  th.py
